# micromind

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG  Dockerfile  LICENSE  MANIFEST.in  README.md  __main__.py  clean_and_start.sh  conversion_requirements.txt  main.py  pyproject.toml  req.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yaml  code.yaml  docs.yaml  doctest.yaml  export.yaml  pre-commit.yaml  pypi.yml  python_versions.yml  tests.yml
docs/: conf.py  docs-requirements.txt  phinet.conversion.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  phinet.conversion.doctree  phinet.doctree
docs/_build/html/: genindex.html  index.html  modules.html  objects.inv  phinet.conversion.html  phinet.html  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  contribution.rst  index.rst  micromind.conversion.rst  micromind.networks.phinet.rst  micromind.networks.rst  micromind.rst  micromind.utils.rst  modules.rst  recipes.image_classification.rst  recipes.object_detection.rst  recipes.rst  tutorial.rst
examples/: cifar10.py  mind.py  yolo.py
examples/yolo_cfg/: default.yaml
micromind/: __init__.py  convert.py  core.py
micromind/conversion/: __init__.py  convert.py
micromind/networks/: __init__.py  microyolohead.py  modules.py  phinet.py  xinet.py  yolo.py  yolov8.py
micromind/networks/phinet/: model_utils.py  networks.py
micromind/utils/: __init__.py  checkpointer.py  configlib.py  helpers.py  load_params.py  parse.py  yolo.py  yolo_helpers.py
micromind/yolo/: __init__.py  benchmarks.py  microyolohead.py  microyoloheadphiblock.py  model.py
micromind/yolo/detection/: detectionmicromodule.py  detectionmicrotrainer.py
micromind/yolo/engine/: exporter.py
micromind/yolo/segmentation/: segmentationmicromodule.py  segmentationmicrotrainer.py
micromind/yolo/utils/: benchmarks.py
model/: model_utils.py  phinet.py  phinet_convblock.py  phinets.py
phinet/: __init__.py  blocks.py  model_utils.py  networks.py
phinet/conversion/: convert.py
phinet_pl/: model_utils.py  phinet.py  phinet_convblock.py
recipes/NAS/: README.md  add_actual_score.py  distribution.py  epe_nas.py  extra_requirements.txt  logsynflow.py  naswot.py  naswot_naslib.py  naswot_ni.py  np.py  orion_search.py  orion_to_pandas_patch.py  plot_pareto.py  score_networks.py  synflow.py  utils.py  wandb_update.py
recipes/detection/: 1_head.py  1_head_downsampled_1_more.py  1_head_no_SPPF.py  README.md  bench.py  detection.py  export.py  extra_requirements.txt  launch_training.sh  train.py  yolo.py
recipes/detection/benchmark/: bench.py
recipes/detection/inference_raspberry/: best_float16.tflite  best_float32.tflite  best_integer_quant.tflite  lite_inference_compact.py
recipes/detection/yolo/: __init__.py  benchmarks.py  microyolohead.py  microyoloheadphiblock.py
recipes/image_classification/: README.md  cifar10.sh  classification.py  distributed_train.sh  extra_requirements.txt  inference.py  launch_training.sh  prepare_data.py  train.py
recipes/image_classification/cfg/: phinet.py  phinet_b0recipe.py  xinet.py
recipes/object_detection/: DetectionHeadModule.py  README.md  bench.py  check_model.py  extra_requirements.txt  inference.py  prepare_data.py  test.py  train.py  yolo_loss.py
recipes/object_detection/benchmark/: bench.py
recipes/object_detection/cfg/: yolo_phinet.py
recipes/object_detection/modules/: benchmarks.py  detectionheadmodule.py  detectionheadtrainer.py  detectionmicromodule.py  detectionmicrotrainer.py  microhead.py  microheadOLD.py  model.py
recipes/object_detection/plots/: plot_graph.py  plotting.py  plotting_2.py
recipes/object_segmentation/: bench.py  train.py  yolo
recipes/objection_detection/: inference.py  prepare_data.py  train.py  yolo_loss.py
recipes/segmentation/: launch_training.sh  segmentation.py  train.py  yolo
recipes/tinyCLAP/: README.md
tests/: detection.py  networks.py  temp.onnx  test_networks.py
(+39 files in other folders)
