# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micromind"
version = "0.0.1"
description = "MicroMind"
readme = "README.md"
authors = [{ name = "Francesco Paissan", email = "francescopaissan@gmail.com" }]
#license = { file = "LICENSE" }
#classifiers = [
    #"License :: OSI Approved :: MIT License",
    #"Programming Language :: Python",
    #"Programming Language :: Python :: 3",
#]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "torch",
    "torchinfo",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/fpaissan/micromind"

[project.scripts]
phinet = "__main__:main"

[tool.setuptools]
py-modules = []
